@@ -12,6 +12,8 @@ New in 0.5:
 - in module context (steve, thyseus)
 - started to begin submodularized infrastructure. see docs/submodules.txt (thyseus)
 - Profile submodule now allows to have multiple profiles for an user, with the last one being the default.
+- Role submodule now has the possibility to assing 'slave' users to users. This way you can define an
+  user hierarchy that defines which users can administrate which users (thyseus)
 
 New in 0.4:
 
